# ShenGuang-smart_lighting_control_device

./: README.md
Communication_between_hi3861_and_android/: settings.gradle
Communication_between_hi3861_and_android/app/: build.gradle
Communication_between_hi3861_and_android/app/src/androidTest/java/com/example/communication_between_hi3861_and_android/: ExampleInstrumentedTest.java
Communication_between_hi3861_and_android/app/src/main/: AndroidManifest.xml
Communication_between_hi3861_and_android/app/src/main/java/com/example/communication_between_hi3861_and_android/: MainActivity.java  MyTcpClient.java
Communication_between_hi3861_and_android/app/src/main/res/layout/: activity_main.xml
Communication_between_hi3861_and_android/app/src/main/res/values/: strings.xml  themes.xml
Communication_between_hi3861_and_android/app/src/main/res/values-night/: themes.xml
Communication_between_hi3861_and_android/app/src/test/java/com/example/communication_between_hi3861_and_android/: ExampleUnitTest.java
Communication_between_hi3861_and_android/gradle/wrapper/: gradle-wrapper.properties
code_Hi3861/: www
hi3516/修改后的nnie_sample，新添加了yolov3-tiny检测选项/: sample_nnie_main.c
hi3516/修改后的nnie_sample，新添加了yolov3-tiny检测选项/sample/: sample_nnie.c  sample_nnie.h  sample_nnie_main.h
hi3516/修改后的nnie_sample，新添加了yolov3-tiny检测选项/sample_nnie_software/: sample_svp_nnie_software.c  sample_svp_nnie_software.h
hi3516/程序/ai_infer_process/: ai_infer_process.c  ai_infer_process.h
hi3516/程序/include/: hand_classify.h  yolov3tiny_hand_detect.h
hi3516/程序/smp/: sample_media_ai.c
hi3516/程序/src/: hand_classify.c  yolov3tiny_hand_detect.c
hi3861/: BUILD.gn
hi3861/godlight/: BUILD.gn  main.c
hi3861/godlight/Recycle/: I2CtoESP32.c  I2CtoESP32.h  Motor_controll.c  Motor_controll.h  old_BH1750.c  old_BH1750.h  oled.h  oled_ssd13.c  oled_ssd13.h
hi3861/godlight/include/: BH1750.h  LED.h  Motor_control.h  uart_func.h
hi3861/godlight/src/: BH1750.c  LED.c  Motor_control.c  uart_func.c  wifi_connect.c
