# Copyright (c) 2022 HiSilicon (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# led.c会和TCP_new.c互相干扰


static_library("godlight") {
  sources = [
    "src/BH1750.c",
    "src/LED.c",
    "src/wifi_connect.c",
    "src/Motor_control.c",
    "src/uart_func.c",
    #"src/oled_ssd13.c",
    #"src/Motor_controll.c",
    #"src/I2CtoESP32.c",
    "main.c",
  ]
    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    cflags += [ "-Wno-unused-parameter" ]

  include_dirs = [
    "//utils/native/lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//kernel/liteos_m/components/cmsis/2.0",
    "//base/iot_hardware/interfaces/kits/wifiiot_lite",
    "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/include/",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/board/bearpi/bearpi_hm_nano/iot_hardware_hals/include",
    "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
    "//device/hisilicon/hispark_pegasus/sdk_liteos/app/demo/include",
    "include",
    "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/include/",
  ]
  deps = [ "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals:bearpi_iot_hardware_hals" ]
  
}
